<resources>
    <string name="app_name">Dotify</string>
    <string name="change_user">CHANGE USER</string>
    <string name="default_user_name">WayneLi1063</string>
    <string name="album_img_desc">Nancy Mulligan - Ed Sheeran</string>
    <string name="song_title">Nancy Mulligan</string>
    <string name="song_artist">Ed Sheeran</string>
    <string name="username_hint">Username</string>
    <string name="skip_to_previous_track">Skip to previous track</string>
    <string name="play_or_pause_current_song">Play or pause current song</string>
    <string name="skip_to_next_track">Skip to next track</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="placeholder">Placeholder</string>
    <string name="long_placeholder">Plaaaaaaaaaaaaaceeeeeeeeeeeehooooooooldeeeeeeeerrrrrr</string>
    <string name="number_plays">%d plays</string>
    <string name="apply">APPLY</string>
    <string name="miniPlayer">%s - %s</string>
    <string name="songRemoval">%s is removed.</string>
    <string name="user_info">User Info</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="user_name_placeholder">User Name Placeholder</string>
    <string name="currently_playing">Currently Playing:</string>
    <string name="follower">%d Followers</string>
</resources>
