<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <LinearLayout
        android:id="@+id/linear_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/default_user_name"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:inputType="text"
            android:visibility="gone"
            android:autofillHints="Username"
            android:hint="@string/username_hint"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imgDivide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/album_img_desc"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/divide"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"/>

    <TextView
        android:id="@+id/txtSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:id="@+id/txtArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/song_artist"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/txtNumberPlays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_small">

        <ImageView
            android:id="@+id/imgPrev"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:tint="@color/grey"
            android:contentDescription="@string/skip_to_previous_track" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:src="@drawable/ic_play_circle_filled_black_24dp"
            android:tint="@color/grey"
            android:contentDescription="@string/play_or_pause_current_song" />

        <ImageView
            android:id="@+id/imgNext"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:tint="@color/grey"
            android:contentDescription="@string/skip_to_next_track" />

    </LinearLayout>

</LinearLayout>