<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    tools:context=".MainActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:text="@string/default_user_name"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/btnChangeUser"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeUser"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnChangeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/btnChangeUser"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeUser"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:autofillHints="Username"
        android:hint="@string/username_hint"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="txtUserName, btnChangeUser, etUserName" />

    <ImageButton
        android:id="@+id/imgDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/album_img_desc"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/divide"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barUserName"
        app:layout_constraintBottom_toTopOf="@+id/glImgDivide"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImgDivide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"/>

    <TextView
        android:id="@+id/txtSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@+id/imgDivide" />

    <TextView
        android:id="@+id/txtArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/song_artist"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSongTitle" />

    <TextView
        android:id="@+id/txtNumberPlays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArtist" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumberPlays">

        <ImageView
            android:id="@+id/imgPrev"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:tint="@color/grey62"
            android:contentDescription="@string/skip_to_previous_track" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:src="@drawable/ic_play_circle_filled_black_24dp"
            android:tint="@color/grey62"
            android:contentDescription="@string/play_or_pause_current_song" />

        <ImageView
            android:id="@+id/imgNext"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:tint="@color/grey62"
            android:contentDescription="@string/skip_to_next_track" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>