<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding_large">

    <ImageButton
        android:id="@+id/imgProfilePic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@android:color/transparent"
        android:contentDescription="@string/user_profile_picture"
        android:foreground="?selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/glProfilePic"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glProfilePic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/user_name_placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@+id/glProfilePic" />

    <TextView
        android:id="@+id/txtFollowerCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/follower"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <TextView
        android:id="@+id/txtCurrentlyPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/currently_playing"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFollowerCount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSongItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentlyPlaying">

        <ImageView
            android:id="@+id/imgUserSongPreview"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:contentDescription="@string/placeholder"
            android:src="@drawable/divide"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUserListSongName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toTopOf="@+id/txtUserListArtistName"
            app:layout_constraintLeft_toRightOf="@+id/imgUserSongPreview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgUserSongPreview"
            tools:text="@string/long_placeholder" />

        <TextView
            android:id="@+id/txtUserListArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/imgUserSongPreview"
            app:layout_constraintLeft_toRightOf="@+id/imgUserSongPreview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserListSongName"
            tools:text="@string/long_placeholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>